--- a/src/components/movie-list-item/movie-list-item.css
+++ b/src/components/movie-list-item/movie-list-item.css
@@ -55,11 +55,11 @@
     transform: tranlateX(0);
 }
 
-.list-group-item.increase .list-group-item-input,
-.list-group-item.increase .list-group-item-label {
+.list-group-item.favourite .list-item-group-input,
+.list-group-item.favourite .list-item-group-label {
     color: #e09f3e;
 }
 
-.list-group-item.increase .btn-star {
+.list-group-item.favourite .btn-star {
     color: #eaeaea;
 }
